# mailing_service

./: README.md  groups.json  pyproject.toml  sample_env  test.html
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templatetags/: tags.py
clients/: models.py  urls.py  views.py
clients/migrations/: 0001_initial.py  0002_client_comment.py  0002_initial.py  0003_alter_client_unique_together.py  0003_alter_client_users.py  0004_alter_client_users.py  0005_rename_first_name_client_name_and_more.py  0006_alter_client_unique_together_alter_client_email_and_more.py
config/: settings.py  urls.py
home/: urls.py  views.py
logs/: admin.py  models.py  urls.py  views.py
logs/migrations/: 0001_initial.py  0002_rename_users_log_user.py  0003_alter_log_user.py  0004_alter_log_mailing.py  0005_alter_log_user.py
mailings/: admin.py  models.py  permissions.py  urls.py  views.py
mailings/migrations/: 0001_initial.py  0002_remove_mailing_clients_remove_mailing_message_and_more.py  0003_remove_mailing_clients.py  0004_mailing_clients.py  0005_mailing_mailing_status_mailing_mailing_time_and_more.py  0006_alter_mailing_mailing_status.py  0007_alter_mailing_mailing_status.py  0008_alter_mailing_mailing_time_alter_mailing_periodicity.py  0009_alter_mailing_periodicity.py  0010_alter_mailing_mailing_time.py  0011_alter_mailing_mailing_time.py  (+6 more)
output_messages/: admin.py  apps.py  models.py  urls.py  views.py
users/: forms.py  models.py  urls.py  views.py
utils/: create_cron_jobs.py  email_post.py  mailing.py  test_cron.py
(+24 files in other folders)
