[tool.poetry]
name = "mailing_service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.2"
psycopg2-binary = "^2.9.9"
uuid = "^1.30"
crispy-bootstrap5 = "^2023.10"
django-crispy-forms = "^2.1"
python-dotenv = "^1.0.1"
ipython = "^8.21.0"
python-crontab = "^3.0.0"
pillow = "^10.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
